# sniper

./: .gitignore  Cargo.toml  Contributing.md  README.md  Snippet_Syntax.md  sniper.proto  sniper_service.proto
.cargo/: config.toml
config/: config.toml  sniper.pest
config/python/: base.json  base.toml  tensorflow.json  tensorflow.toml
config/python/templates/: tensorflow_templates.toml
crates/sniper/: Cargo.toml
crates/sniper-common/: Cargo.toml  build.rs
crates/sniper-common/src/: lib.rs
crates/sniper/src/: config.rs  main.rs  parser.rs  server.rs  snippet.rs  snippet_manager.rs  target.rs
crates/test-client/: Cargo.toml  Readme.md
crates/test-client/src/: main.rs
proto/: sniper.proto  sniper_service.proto
scripts/: install  sniper.service  sniper.socket  test-server
sniper/: Cargo.toml  build.rs
sniper-client/: Cargo.toml  build.rs  main.rs
sniper-client/src/: main.rs
sniper-common/: Cargo.toml
sniper-common/src/: client.rs  lib.rs  service.rs
sniper-node/: Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
sniper-node/lib/: index.d.ts  index.js
sniper-node/src/: lib.rs
sniper/src/: config.rs  handler.rs  main.rs  parser.rs  rifle.rs  server.rs  sniper.rs  sniper_server.rs  snippet.rs  snippetParser.rs  snippet_manager.rs  spotter.rs  target.rs  util.rs
sniper/src/snippet_manager/: parser.rs
snippets/: config.toml
test-client/: Cargo.toml
test-client/src/: main.rs
