

[workspace]
members = ["crates/sniper-common", "crates/sniper", "crates/test-client"]
package.version = "0.1.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]

anyhow = "1.0"
tonic = "0.12.3"
prost = "0.13.3"
prost-types = "0.13.3"
serde = { version = "1.0.115", features = ["derive"] }
tracing-opentelemetry = "0.26.0"
opentelemetry = { version = "0.26.0" }
opentelemetry-semantic-conventions = { version = "0.26.0" }
opentelemetry_sdk = { version = "0.26.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.26", features = ["tonic"] }
async-stream = "0.3.3"
clap = "4.5.19"
dashmap = "6.1.0"
directories = "5.0.1"
futures = "0.3.21"
futures-util = "0.3"
hyper-util = "*"
lazy_static = "1.4.0"
libc = "0.2.71"
nom = "7.1.1"
qp-trie = "0.8.0"
rayon = "1.5"
regex = "1.4.6"
serde-tuple-vec-map = "1.0.0"
serde_bytes = "0.11.5"
serde_json = "1"
tokio = "1.20.4"
tokio-stream = "0.1.9"
tokio-util = "0.7.3"
toml = "0.8.19"
tonic-build = "0.12.3"
tower = "0.5.1"
tracing = "0.1"
tracing-subscriber = "0.3.11"

[workspace.build-dependencies]
tonic-build = "0.12.3"
serde = { version = "1.0.115", features = ["derive"] }
