[package]
name = "sniper-client"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[build-dependencies]
#[[bin]]


[dependencies]
#sniper-common={path="../sniper-common",features=["client"]}
futures = "0.3.14"
anyhow = "1.0"
serde_json = "1"
tarpc = {version="0.29.0", features = ["tokio1","serde-transport"] }
tokio = {version="1.5.0",features=["net","macros","rt-multi-thread"]}#NOTE: more features may be added (as required)
tokio-serde={version="0.8",features=["json"]}
tokio-util={version="0.7.3",features=["codec"]}
qp-trie={version="0.8.0"}
#dashmap = {version="4.0.2", features=["serde","rayon"]}
#rayon = {version="1.5"}
#serde-tuple-vec-map={version="1.0.0"}
#regex= {version="1.4.6"}
#lazy_static= "1.4.0"
serde = {version="1.0.115", features=["derive"]}
tracing = { version = "0.1" }
tracing-opentelemetry = "0.17.3"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["tokio"] }
tracing-subscriber = "0.3.11"