[package]
name = "sniper-client"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[build-dependencies]
#[[bin]]


[dependencies]
#sniper-common={path="../sniper-common",features=["client"]}
futures = "0.3.14"
anyhow = "1.0"
tokio = {version="1.5.0",features=["net","macros","rt-multi-thread"]}#NOTE: more features may be added (as required)
tokio-serde={version="0.8",features=["json"]}
tokio-util={version="0.7.3",features=["codec"]}
tonic="0.7.2"
prost = "0.10.4"
prost-types = "0.10.1"
tower = "0.4.13"
serde = {version="1.0.115", features=["derive"]}
tracing = { version = "0.1" }
tracing-opentelemetry = "0.17.3"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["tokio"] }
tracing-subscriber = "0.3.11"

[build-dependencies]
tonic-build= "0.7.2"
serde = {version="1.0.115", features=["derive"]}