[package]
name = "sniper-common"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[build-dependencies]
[features]
default=[]
client=["tokio/net","tokio-util"]

[dependencies]
futures = "0.3.14"
anyhow = "1.0.40"
tarpc = {version="0.26.2", features = ["tokio1","serde-transport"] }
#serde_json = "1"
tokio = {version="1.5.0",features=["macros","rt-multi-thread"]}#NOTE: more features may be added (as required)
tokio-util={version="0.6.6",features=["codec"],optional=true}
tokio-serde={version="0.8",features=["json"]}
#tokio-util={version="0.6.6",features=["codec"]}
#dashmap = {version="4.0.2", features=["serde","rayon"]}
#rayon = {version="1.5"}
#serde-tuple-vec-map={version="1.0.0"}
#regex= {version="1.4.6"}
#lazy_static= "1.4.0"
serde = {version="1.0.115", features=["derive"]}
#toml = {version="0.5", features = ["preserve_order"]}
#directories = "3.0"
tracing = { version = "0.1" }
tracing-opentelemetry = "0.12"
opentelemetry = { version = "0.13", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.12", features = ["tokio"] }
tracing-subscriber = "0.2"

[lib]
name = "sniper_common"
path = "src/lib.rs"
