[package]
name = "sniper-server"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[build-dependencies]

[[bin]]
name="sniper"
path="src/main.rs"

[dependencies]
sniper-common={path="../sniper-common"}
anyhow = "1.0"
futures = "0.3.14"
serde_json = "1"
tarpc = {version="0.26.2", features = ["tokio1","serde-transport"] }
tokio = {version="1.5.0",features=["net","macros","rt-multi-thread"]}#NOTE: more features may be added (as required)
tokio-serde={version="0.8",features=["json"]}
tokio-util={version="0.6.6",features=["codec"]}
dashmap = {version="4.0.2", features=["serde","rayon"]}
rayon = {version="1.5"}
serde-tuple-vec-map={version="1.0.0"}
regex= {version="1.4.6"}
lazy_static= "1.4.0"
serde = {version="1.0.115", features=["derive"]}
toml = {version="0.5", features = ["preserve_order"]}#NOTE: still used for config
directories = "3.0"
umask="1.0.0"