[package]
name = "sniper-server"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[build-dependencies]


[[bin]]
name="sniper"
path="src/main.rs"

[dependencies]
#sniper-common={path="../sniper-common"}
anyhow = "1.0"
async-stream = "0.3"
futures = "0.3.14"
serde_json = "1"
ringbuf = "0.2.8"
#tarpc = {version="0.26.2", features = ["tokio1","serde-transport"] }
tokio = {version="1.5.0",features=["net","fs","macros","rt-multi-thread"]}#NOTE: more features may be added (as required)
tokio-serde={version="0.8",features=["bincode"]}
tokio-util={version="0.7.3",features=["codec"]}
tokio-stream={version="0.1.9"}
dashmap = {version="^5.0", features=["serde","rayon"]}
qp-trie={version="0.8.0",features=["serde"]}
rayon = {version="1.5"}
serde-tuple-vec-map={version="1.0.0"}
regex= {version="1.4.6"}
lazy_static= "1.4.0"
serde = {version="1.0.115", features=["derive"]}
serde_bytes={version="0.11.5"}
toml = {version="0.5", features = ["preserve_order"]}#NOTE: still used for config
directories = "^4.0.1"
daemonize = "0.4.1"
libc = "0.2.71"
whoami = "^1.2"
#umask="1.0.0"
nom="^7.1"
tonic="0.7.2"
prost = "0.10.4"
prost-types = "0.10.1"
futures-util = "0.3"
#TODO: put these behind a feature flag
tracing = { version = "0.1" }
tracing-opentelemetry = "0.17.4"
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tracing-subscriber = "^0.3"

[build-dependencies]
tonic-build= "0.7.2"
serde = {version="1.0.115", features=["derive"]}
#prost-build = "0.9.0"