[package]
name = "sniper-server"
version = "0.1.0"
authors = ["Joshua Ferguson <joshua.ferguson.273@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[build-dependencies]


[[bin]]
name = "sniper"
path = "src/main.rs"

[dependencies]
sniper-common = { path = "../sniper-common" }
async-stream = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "fs", "macros", "rt-multi-thread"] } #NOTE: more features may be added (as required)
tokio-util = { workspace = true, features = ["codec"] }
tokio-stream = { workspace = true, features = ["net"] }
dashmap = { workspace = true, features = ["serde", "rayon"] }
qp-trie = { workspace = true, features = ["serde"] }
rayon = { workspace = true }
serde-tuple-vec-map = { workspace = true }
regex = { workspace = true }
lazy_static = { workspace = true }
#flexstr={}
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
toml = { workspace = true, features = ["preserve_order"] } #NOTE: still used for config
directories = { workspace = true }
libc = { workspace = true }
nom = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures-util = { workspace = true }

#TODO: put these behind a feature flag
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }


#prost-build = "0.9.0"
